# Visper-Opensource

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
Claude Docs/: README.md  api-reference.md  architecture.md  codebase-analysis.md  database-schema.md  frontend-structure.md  key-flows.md  plan.md  setup-and-development.md  tech-stack.md
Tauri/: README.md  package-lock.json  package.json  vite.config.ts
Tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri/src-tauri/capabilities/: default.json
Tauri/src-tauri/src/services/: database.rs  gemini.rs
Tauri/src/renderer/: main.ts
Tauri/src/renderer/components/dictation/: Waveform.svelte
Tauri/src/renderer/components/feedback/: Toast.svelte
Tauri/src/renderer/components/layout/: NavBar.svelte
Tauri/src/renderer/lib/: formatters.ts  sounds.ts  tauri-api.ts
Tauri/src/renderer/views/: Dictation.svelte  History.svelte  Settings.svelte  Welcome.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/services/: database.rs  gemini.rs  mod.rs  settings.rs
src/main/: main.ts  preload.ts
src/main/services/: database.service.ts  gemini.service.ts  hotkey.service.ts  settings.service.ts  tray.service.ts  window.service.ts
src/renderer/: App.svelte  index.html  main.ts
src/renderer/components/dictation/: MicButton.svelte  Timer.svelte  TranscriptBox.svelte  Waveform.svelte
src/renderer/components/feedback/: Toast.svelte
src/renderer/components/layout/: NavBar.svelte  TitleBar.svelte
src/renderer/lib/: audio-recorder.ts  formatters.ts
src/renderer/styles/: global.css
src/renderer/views/: Dictation.svelte  History.svelte  Settings.svelte  Welcome.svelte
