[package]
name = "visper"
version = "1.0.0"
description = "Lightweight dictation app powered by Gemini Flash API"
authors = ["Ahmad"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# HTTP Client for Gemini API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Base64 encoding for audio
base64 = "0.22"

# Windows credential storage
keyring = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Path handling
dirs = "5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
