[package]
name = "visper"
version = "1.0.0"
description = "Lightweight dictation app powered by Gemini Flash API"
authors = ["Ahmad"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP Client for Gemini API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Base64 encoding for audio
base64 = "0.22"

# Windows credential storage
keyring = "3"

# Error handling
anyhow = "1"

# Path handling
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
